discussion/kv_engine/157996/157996_rev3_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-39338 magma-kvstore: Add Status::DiskFull error code to rollback errors

Change-Id: I9abf47ccd5ff8075e3c9f4979d4ea6ef75dd06f1

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Sarath Lakshman
Date: 2021-08-09 10:06:36.000000000
Message: 
Patch Set 3: Patch Set 2 was rebased
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2021-08-09 10:23:15.000000000
Message: 
Patch Set 3: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/38376/ : FAILURE

Compile error at C:/Jenkins/workspace/kv_engine-windows-master/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.cc(2326): error C2039: "DiskFull": is not a member of "magma::Status" ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/38376/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/11132/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.cc:2326:18: error: no member named "DiskFull" in "magma::Status" [clang-diagnostic-error]
    case Status::DiskFull:
                 ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/11132/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.cc:2326:18:
error: no member named "DiskFull" in "magma::Status" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/11132/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/32726/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.cc:2326:18:
error: no member named "DiskFull" in "magma::Status"
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/32726/ )

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/759/ : FAILURE

Compile error at [2021-08-09T10:11:51.154Z] /home/couchbase/jenkins/workspace/kv_engine.libFuzzer_master/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.cc:2326:18:
error: no member named "DiskFull" in "magma::Status"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/759/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/13274/ : FAILURE

Compile error at [2021-08-09T10:16:57.660Z] /home/couchbase/jenkins/workspace/kv_engine.threadsanitizer_master/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.cc:2326:18:
error: no member named "DiskFull" in "magma::Status"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/13274/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/12917/ : FAILURE

Compile error at [2021-08-09T10:14:53.252Z] /home/couchbase/jenkins/workspace/kv_engine.linux_master/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.cc:2326:18:
error: ?DiskFull? is not a member of ?magma::Status?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/12917/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/11844/ : FAILURE

Compile error at [2021-08-09T10:08:55.172Z] /Users/couchbase/workspace/workspace/kv_engine.macos_master/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.cc:2326:18:
error: no member named "DiskFull" in "magma::Status"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/11844/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/20817/ : FAILURE

Compile error at [2021-08-09T10:19:11.651Z] /home/couchbase/jenkins/workspace/kv_engine.ASan-UBSan_master/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.cc:2326:18:
error: no member named "DiskFull" in "magma::Status"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/20817/ )

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/741/ : FAILURE

Compile error at [2021-08-09T10:14:23.446Z] /home/couchbase/jenkins/workspace/kv_engine.aarch64-linux_master/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.cc:2326:18:
error: ?DiskFull? is not a member of ?magma::Status?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/741/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/9821/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/12729/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
Author: Sarath Lakshman
Date: 2021-08-09 15:02:58.000000000
Message: 
Patch Set 3:

Merging this change along with dependent change: http://review.couchbase.org/c/magma/+/157645
----------------------------------------------------------------------------------------------------------------------
Author: Sarath Lakshman
Date: 2021-08-09 15:18:28.000000000
Message: 
Patch Set 3: Code-Review+2
----------------------------------------------------------------------------------------------------------------------
Author: Sarath Lakshman
Date: 2021-08-09 15:18:44.000000000
Message: 
Patch Set 3: Verified+1
----------------------------------------------------------------------------------------------------------------------
Author: Sarath Lakshman
Date: 2021-08-09 15:18:54.000000000
Message: 
Removed Verified-1 by Build Bot <build@couchbase.com>

----------------------------------------------------------------------------------------------------------------------
